<resources>
    <string name="app_name">Act-For-Life</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_area">Area Information</string>
    <string name="menu_report">Report</string>
    <string name="menu_emergency_support">Emergency Support</string>
    <string name="menu_events">New Events</string>
    <string name="menu_my_contribution">My Contribution</string>
</resources>
