<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.callfornation.actforlife.ui.home.HomeFragment"
        android:label="@string/menu_area"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.callfornation.actforlife.ui.home.HomeSecondFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_slideshow">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.callfornation.actforlife.ui.gallery.GalleryFragment"
        android:label="@string/menu_emergency_support"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.callfornation.actforlife.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_my_contribution"
        android:name="com.callfornation.actforlife.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_my_contribution"
        tools:layout="@layout/fragment_slideshow" />
</navigation>